--- a/index.html
+++ b/index.html
@@ -1,15 +1,59 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Maquillage permanent à Draguignan dans le var pour vos sourcils, vos lèvres ou encore votre regard.">
     <title>Derma Capillis - Maquillage permanent Draguignan</title>
+    <!--    style -->
+    <link rel="stylesheet" href="style.css">
+    <!-- Icon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!--    Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
 
-<h1>Derma Capillis - Maquillage permanent Draguignan</h1>
-<a href="https://derma-capillis.com">Découvrir</a>
+<header>
+    <h1>Derma Capillis - Maquillage permanent Draguignan</h1>
+</header>
 
+<main>
+    <section>
+        <h2>Services de Maquillage Permanent à Draguignan</h2>
+        <p>Découvrez nos services de maquillage permanent disponibles à Draguignan. Nous offrons une gamme complète de services pour répondre à vos besoins de beauté.</p>
+        <a href="https://derma-capillis.com">Découvrir</a>
+    </section>
+
+    <section>
+        <h2>Contactez-Nous</h2>
+        <p>Pour plus d'informations sur nos services de maquillage permanent à Draguignan, n'hésitez pas à nous contacter.</p>
+        <p>12 Traverse des Ferrières 83490 Le Muy (Var)</p>
+        <p><a href="tel:0760297628‬"> <span class="elementor-icon-list-text"> 07 60 29 76 28‬</span> </a></p>
+        <p><a href="mailto:contact@derma-capillis.com"> <span class="elementor-icon-list-text">contact@derma-capillis.com</span> </a></p>
+    </section>
+</main>
+
+<footer>
+    <p>&copy; Copyright 2024 Derma Capillis</p>
+</footer>
 </body>
 </html>
