feat: style improvement

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <!--    style -->
     <link rel="stylesheet" href="style.css">
     <!-- Icon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!--    Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,23 +33,28 @@
 <body>
 
 <header>
-    <h1>Derma Capillis - Maquillage permanent Draguignan</h1>
+    <a href="https://derma-capillis.com">
+        <img src="assets/img/logo-derma-capillis-maquillage-permanent.svg" alt="Derma Capillis" width="180" height="104">
+    </a>
 </header>
 
 <main>
     <section>
-        <h2>Services de Maquillage Permanent à Draguignan</h2>
-        <p>Découvrez nos services de maquillage permanent disponibles à Draguignan. Nous offrons une gamme complète de services pour répondre à vos besoins de beauté.</p>
-        <a href="https://derma-capillis.com">Découvrir</a>
+        <h1>Derma Capillis la référence du maquillage permanent au alentour de Draguignan</h1>
+        <p>
+            Situés à <em>Le Muy</em> dans le <em>Var</em>, proche de <em>Draguignan</em>, nous proposons une gamme complète de services de <em>maquillage permanent</em>.
+            Que vous souhaitiez redessiner vos <em>sourcils</em>, intensifier votre <em>regard</em> ou encore redonner de la couleur à vos <em>lèvres</em>, nous avons la solution..
+        </p>
+        <a href="https://derma-capillis.com" class="btn">En savoir plus</a>
     </section>
 
-    <section>
-        <h2>Contactez-Nous</h2>
-        <p>Pour plus d'informations sur nos services de maquillage permanent à Draguignan, n'hésitez pas à nous contacter.</p>
-        <p>12 Traverse des Ferrières 83490 Le Muy (Var)</p>
-        <p><a href="tel:0760297628‬"> <span class="elementor-icon-list-text"> 07 60 29 76 28‬</span> </a></p>
-        <p><a href="mailto:contact@derma-capillis.com"> <span class="elementor-icon-list-text">contact@derma-capillis.com</span> </a></p>
-    </section>
+<!--    <section>-->
+<!--        <h2>Contactez-Nous</h2>-->
+<!--        <p>Pour plus d'informations sur nos services de maquillage permanent à Draguignan, n'hésitez pas à nous contacter.</p>-->
+<!--        <p>12 Traverse des Ferrières 83490 Le Muy (Var)</p>-->
+<!--        <p><a href="tel:0760297628‬"> <span class="elementor-icon-list-text"> 07 60 29 76 28‬</span> </a></p>-->
+<!--        <p><a href="mailto:contact@derma-capillis.com"> <span class="elementor-icon-list-text">contact@derma-capillis.com</span> </a></p>-->
+<!--    </section>-->
 </main>
 
 <footer>
