feat: style minify

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Maquillage permanent à Draguignan dans le var pour vos sourcils, vos lèvres ou encore votre regard.">
     <title>Derma Capillis - Maquillage permanent Draguignan</title>
     <!--    style -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.min.css">
     <!-- Icon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/assets/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/assets/favicon/apple-icon-60x60.png">
