--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Maquillage permanent à Draguignan dans le var pour vos sourcils, vos lèvres ou encore votre regard.">
-    <title>Derma Capillis - Maquillage permanent Draguignan</title>
+    <title>Derma Capillis - Maquillage Permanent Draguignan</title>
     <!--    style -->
     <link rel="stylesheet" href="style.min.css">
     <!-- Icon -->
@@ -21,7 +21,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/assets/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
@@ -34,7 +33,7 @@
 
 <header>
     <a href="https://derma-capillis.com">
-        <img src="assets/img/logo-derma-capillis-maquillage-permanent.svg" alt="Derma Capillis" width="180" height="104">
+        <img src="assets/img/logo-derma-capillis-maquillage-permanent.svg" alt="Logo Derma Capillis" width="180" height="104">
     </a>
 </header>
 
