--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section>
         <h1>Derma Capillis la référence du maquillage permanent au alentour de Draguignan</h1>
         <p>
-            Situés à <em>Le Muy</em> dans le <em>Var</em>, proche de <em>Draguignan</em>, nous proposons une gamme complète de services de <em>maquillage permanent</em>.
+            Situés à <em>Trans en Provence</em> dans le <em>Var</em>, proche de <em>Draguignan</em>, nous proposons une gamme complète de services de <em>maquillage permanent</em>.
             Que vous souhaitiez redessiner vos <em>sourcils</em>, intensifier votre <em>regard</em> ou encore redonner de la couleur à vos <em>lèvres</em>, nous avons la solution..
         </p>
         <a href="https://derma-capillis.com" class="btn">En savoir plus</a>
